--- a/index.html
+++ b/index.html
@@ -4,10 +4,47 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Project</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body></body>
+<ul>
+<li><a href="aboutme.asp">ABOUT ME</a></li>
+<li><a href="projects.asp">PROJECTS</a></li>
+<li><a href="contacts.asp">CONTACTS</a></li>
+</ul>
+    
+<h1>OLHA NIEMIETS</h1>
+    
+<div class="grid-container">
+
+    <div class="grid-item">
+        <img src="https://img.poki.com/cdn-cgi/image/quality=78,width=600,height=600,fit=cover,f=auto/9afd3b92ab41ffca7f368a8fcbd6d39a75894efe0edbc14cf1f067cf625e6678.png">
+          <div class="desc"><strong>Dinosaur game</strong></div>
+      </div>
+
+      <div class="grid-item">
+        <img src="/photo/surveyform.png">
+          <div class="desc"><strong>Survey form</strong></div>
+      </div>
+
+      <div class="grid-item">
+        <img src="/photo/catsdogs.png">
+          <div class="desc"><strong>Are cats or dogs smarter?</strong></div>
+      </div>
+
+      <div class="grid-item">
+        <img src="/photo/thecup.png">
+          <div class="desc"><strong>The Cup</strong></div>
+      </div>
+
+    </div>
+
+
+    <h2>Projects</h2>
     <button>Click!</button>
+    <h3>About me</h3>
+    <
+    <script src="index.js"></script>
 </body>
 </html>
