--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <nav>
     <div class="menu">
   <ul>
-<li class="home active"><a href="#home">HOME</a></li>
+<li class="home"><a href="#home">HOME</a></li>
 <li class="projects"><a href="#projects">PROJECTS</a></li>
 <li class="aboutme"><a href="#aboutme">ABOUT ME</a></li>
 <li class="contacts"><a href="#contacts">CONTACTS</a></li>
