--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </nav>
 
 <section id="home">
-<h1>OLHA NIEMIETS</h1>
+
 </section>
 
 <section id="projects">
@@ -52,15 +52,16 @@
 </section>
 
 <section id="aboutme">
-
-    <h3>About me</h3>
-    <p> My name is Olha Niemeits. I have a master's degree in Geography, currently studying Swedish and programming.<br> 
+  
+    <h3>About me</h3><br>
+    
+    <p><img id="myphoto" src="/photo/me.jpg">My name is Olha Niemeits. I have a master's degree in Geography, currently studying Swedish and programming.<br> 
        I hope for a successful continuation of my studies next year as well.</p>
    
 </section>
 
 <section id="contacts">
-    <h4>Contacts</h4>
+    <h4>Contacts</h4><br>
     <div class="cont">
 
       <form action="name"class= "name">
